package org.example.model;

public enum TipoDisciplina {
    OBRIGATORIA,
    OPTATIVA
}
